--- a/tela-23.html
+++ b/tela-23.html
@@ -3,5 +3,6 @@
 </div>
 <div class="coluna-direita" style="margin-right: 35px;margin-top: 40px;">
     <p>A figura a seguir destaca as principais consequências da inclusão das PICs nos sistemas de saúde.</p>
-    <img src="recursos/imgs/img-slide-19.svg" style="width: 426px;margin-top: -10px;margin-left: 120px;">
+    <img class="animate__animated animate__backInRight" src="recursos/imgs/img-slide-19.svg"
+        style="width: 426px;margin-top: -10px;margin-left: 120px;">
 </div>
