--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
                 <a onclick="updatePage(28);"><span></span></a>
                 <a onclick="updatePage(29);"><span></span></a>
                 <a onclick="updatePage(30);"><span></span></a>
+                <a onclick="updatePage(31);"><span></span></a>
             </div>
         </nav>
     </footer>
