--- a/tela-11.html
+++ b/tela-11.html
@@ -1,3 +1,14 @@
+<style>
+    .jan {
+        z-index: 30;
+        height: 100%;
+        width: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-color: rgba(0, 0, 0, .8);
+    }
+</style>
 <div style="height: 60px; width: 100%; background-color: #a9e5ea;">
     <img style="height: 60px; width: 460px; position: absolute; right: 0px;" src="recursos/imgs/H1.png">
     <p style="position: absolute;color: #294666;margin-left: 43px;margin-top: 26px;font-size: 12px;">TÓPICO<strong>
@@ -21,7 +32,14 @@
                 imagem a seguir.</p>
         </div>
         <div class="animate__animated animate__backInRight">
-            <img src="recursos/imgs/img-slide-10.svg" style="width: 254px;margin-left: 88px;margin-top: 21px;">
+            <img id="botao_1" src="recursos/imgs/img-slide-10.svg"
+                style="width: 254px; margin-left: 88px; margin-top: 21px; ">
+        </div>
+        <div class="jan" id="janela_1" style="overflow: auto; ">
+            <img id="" src="recursos/imgs/img-slide-10.svg" style="width: 724px;margin-left: 88px;margin-top: 1px;">
+            <p
+                style="font: normal normal normal 14px/18px Poppins;letter-spacing: 0px;color: white;position: absolute;top: -9px;left: 860px;">
+                x</p>
         </div>
     </div>
 </div>
@@ -30,3 +48,28 @@
         <p style="color: #294666;font-size: 11px;">GESTÃO DA APS E PRÁTICAS INTEGRATIVAS EM SAÚDE</p>
     </div>
 </footer>
+<script>
+    $(() => {
+        let janelas = $(document).find('[id^=janela]').css('cursor', 'pointer').on("click", apagarJanelas);
+        apagarJanelas();
+        $(document).find('[id^=btn]').hide();
+        let botoes = $(document).find('[id^=botao]').map((index, botao) => {
+            $(botao).css('cursor', 'pointer');
+            $(botao).hover(() => {
+                $(document).find(`[id=btn_${index + 1}_2]`).show();
+            });
+            $(botao).mouseleave(() => {
+                $(document).find('[id^=btn]').hide();
+            });
+            $(botao).click(() => {
+                apagarJanelas();
+                $(janelas[index]).fadeIn();
+            })
+        })
+        function apagarJanelas() {
+            janelas.map((index, janela) => {
+                $(janela).hide();
+            })
+        }
+    })
+</script>
