--- a/tela-13.html
+++ b/tela-13.html
@@ -25,12 +25,14 @@
     </div>
     <p style="margin-top: 17px;">Considerando as 17 práticas já implantadas no DF, neste curso focaremos em:</p>
     <div style="margin-left: 67px;width: 699px;">
-        <p>acupuntura, arteterapia, automassagem, fitoterapia e plantas medicinais, hatha yoga, homeopatia, lian
-            gong em 18
-            terapias, medicina e terapias antroposóficas, meditação, musicoterapia, reiki, shantala, tai chi chuan e
+        <p>acupuntura, arteterapia, automassagem, fitoterapia e plantas medicinais, <i>
+            hatha yoga, homeopatia, lian
+                gong
+        </i> em 18
+            terapias, medicina e terapias antroposóficas, meditação, musicoterapia, reiki, <i>shantala, tai chi chuan</i> e
             terapia
             comunitária integrativa, as quais constam na política distrital; </p>
-        <p>ayurveda, laya yoga e técnica de redução do estresse,
+        <p><i>ayurveda, laya yoga</i> e técnica de redução do estresse,
             instituídas pela Portaria nº 371, de 3 de junho de 2019.</p>
         <div>
             <img src="recursos/imgs/Icon_awesome-dot-circle-1.svg"
