--- a/tela-15.html
+++ b/tela-15.html
@@ -8,9 +8,6 @@
 </div>
 <div>
     <div style="display: flex;">
-        <div class="animate__animated animate__backInLeft">
-            <img src="recursos/imgs/img-slide-13.svg" style="width: 199px;margin-left: 78px;margin-top: 83px;">
-        </div>
         <div style="width: 408px;margin-left: 100px;margin-top: 42px;">
             <p>As PIS contribuem para o princípio da integralidade, já que ampliam as possibilidades de tratamento,
                 com
@@ -19,7 +16,7 @@
                 diferentes
                 perfis sociais
                 e pessoais.</p>
-            <div class="animate__animated animate__backInRight"
+            <div class="animate__animated animate__backInLeft"
                 style="margin-top: 25px;display: flex;flex-direction: row;width: 393px;height: 208px;top: 139px;right: 148px;background-color: #FFF2D9;border-radius: 10px;">
                 <img src="recursos/imgs/exemplo-icon.svg"
                     style="width: 65px;height: 65px;margin-top: 13px;margin-left: 16px;">
@@ -39,6 +36,9 @@
                         comunidade.</p>
                 </div>
             </div>
+        </div>
+        <div class="animate__animated animate__backInRight">
+            <img src="recursos/imgs/img-slide-13.svg" style="width: 199px;margin-left: 78px;margin-top: 83px;">
         </div>
     </div>
 </div>
