--- a/tela-16.html
+++ b/tela-16.html
@@ -37,16 +37,16 @@
                         <p style="font: normal normal normal 12px/15px Poppins;color: #FFFFFF;">Acupuntura em casos
                             de
                             dor
-                            lombar crônica (URITS et al., 2021), melhorando a dor e a
+                            lombar crônica (URITS <i>et al.</i>, 2021), melhorando a dor e a
                             funcionalidade física imediatamente
-                            após a sessão, assim como a qualidade de vida física (MU et al., 2020); prevenção de
+                            após a sessão, assim como a qualidade de vida física (MU <i>et al.</i>, 2020); prevenção de
                             enxaqueca,
                             sendo pouco mais eficaz
-                            que medicamentos e muito mais segura (GIOVANARDI et al., 2020); redução de dor em
+                            que medicamentos e muito mais segura (GIOVANARDI <i>et al.</i>, 2020); redução de dor em
                             pacientes
                             com
                             câncer em tratamento
-                            paliativo (YANG et al., 2021). </p>
+                            paliativo (YANG <i>et al.</i>, 2021). </p>
                         <p style="font: normal normal normal 12px/15px Poppins;color: #FFFFFF;">Fitoterápicos podem
                             substituir tratamentos convencionais, como em estados leves de
                             ansiedade e depressão, dispepsia não ulcerosa neoplásica, infecções urinárias
@@ -59,10 +59,11 @@
                 style="margin-top: -9px; width: 743px; height: 202px; background: 0% 0% no-repeat padding-box padding-box rgb(126, 101, 145); border-radius: 12px; display: flex; justify-content: space-around; align-items: center;">
                 <div style="color: #FFFFFF;width: 689px;">
                     <div>
-                        <p style="font: normal normal normal 12px/15px Poppins;color: #FFFFFF;">Meditação e yoga em
+                        <p style="font: normal normal normal 12px/15px Poppins;color: #FFFFFF;">Meditação e <i>yoga</i>
+                            em
                             casos de transtornos mentais, em associação com medicamentos e
                             psicoterapia
-                            (VANCAMPFORT et al.,
+                            (VANCAMPFORT <i>et al.</i>,
                             2021). </p>
                         <p style="font: normal normal normal 12px/15px Poppins;color: #FFFFFF;">Meditação como modo
                             de
