--- a/tela-18.html
+++ b/tela-18.html
@@ -13,7 +13,7 @@
                 rochas, areia,
                 plantas rasteiras, método denominado aterramento medicinal, o qual resulta em efeito
                 anti-inflamatório e analgésico,
-                redução do estresse, melhoria no retorno venoso e no sono e bem-estar (MENIGOZA et al., 2020).</p>
+                redução do estresse, melhoria no retorno venoso e no sono e bem-estar (MENIGOZA <i>et al.</i>, 2020).</p>
             <p>Trata-se de prática
                 simples, que não exige formação ou materiais específicos, e pode ser complementada com o hábito de
                 se expor ao sol, a
