--- a/tela-21.html
+++ b/tela-21.html
@@ -18,7 +18,7 @@
         base em dados
         do DataSUS, grande destaque para as plantas medicinais e fitoterapia e as práticas corporais da medicina
         tradicional
-        chinesa (MTC). Outras práticas ofertadas incluíram: terapia comunitária, yoga, massagem, arteterapia,
+        chinesa (MTC). Outras práticas ofertadas incluíram: terapia comunitária, <i>yoga</i>, massagem, arteterapia,
         meditação e
         musicoterapia.</p>
     <p>Já em relação aos atendimentos individuais, mais se destaca a MTC (208.739). Plantas
