--- a/tela-27.html
+++ b/tela-27.html
@@ -20,7 +20,7 @@
         OYARZABAL, E. Meditation and mindfulness in pregnancy and postpartum: a review of the evidence. <b>
             Clinical Obstetrics and
             Gynecology
-        </b>, [s. l.], v. 64, n. 3, p. 661-682, Sept. 2021.
+        </b>, [<i>s. l.</i>], v. 64, n. 3, p. 661-682, Sept. 2021.
     </p>
 
     <p>
