--- a/tela-6.html
+++ b/tela-6.html
@@ -39,7 +39,7 @@
                 Complexos</p>
         </div>
         <div>
-            <div class="jan" id="janela_1" style="cursor: pointer; display: none;">
+            <div class="jan" id="janela_1">
                 <div
                     style="width: 743px;height: 173px;background: #1B8992 0% 0% no-repeat padding-box;display: flex;position: absolute;top: 190px;left: 80px;align-items: center;border-radius: 12px;justify-content: space-evenly;">
                     <div
@@ -63,7 +63,7 @@
                         x</p>
                 </div>
             </div>
-            <div class="jan" id="janela_2" style="cursor: pointer; display: none;">
+            <div class="jan" id="janela_2">
                 <div
                     style="width: 743px;height: 173px;background: #1B8992 0% 0% no-repeat padding-box;display: flex;position: absolute;top: 190px;left: 80px;align-items: center;border-radius: 12px;justify-content: space-evenly;">
                     <div
