--- a/tela-8.html
+++ b/tela-8.html
@@ -7,7 +7,7 @@
         PRÁTICAS INTEGRATIVAS EM SAÚDE: CONCEITOS, CUIDADO E RESULTADOS</p>
 </div>
 <div style="margin-top: 56px;margin-left: 63px;width: 785px;">
-    <p style="margin-top: 50px;">Além dos medicamentos, exemplos de recursos terapêuticos são a meditação e o hatha
+    <p style="margin-top: 50px;">Além dos medicamentos, exemplos de recursos terapêuticos são a meditação e o <i>hatha</i>
         yoga, os quais podem ser aplicados
         isoladamente ou no contexto da medicina ayurvédica, sistema médico complexo que inclui inúmeros recursos
         terapêuticos.
