--- a/tela-16.html
+++ b/tela-16.html
@@ -7,80 +7,23 @@
         PRÁTICAS INTEGRATIVAS EM SAÚDE: CONCEITOS, CUIDADO E RESULTADOS</p>
 </div>
 <div>
-    <div style="margin-left: 63px;margin-top: 16px;width: 785px;">
-        <p>O emprego de tais práticas traz consigo a proposta de contribuir para o aumento na resolutividade dos
-            serviços de saúde
-            por atuarem de modo diferente e potencialmente sinérgico com os medicamentos convencionais ou como
-            alternativa eficaz e
-            mais segura, quando bem selecionadas. </p>
-        <p>Nesse sentido, é importante diferenciar o uso de prática integrativa em
-            substituição ou como complemento ao tratamento convencional. </p>
-        <p>Clique nos nomes e veja como se dá esse uso.</p>
-        <div style="margin-top: 9px;">
-            <div style="display: flex;">
-                <div id="botao_1"
-                    style="width: 258px; height: 36px; background: 0% 0% no-repeat padding-box padding-box rgb(27, 137, 146); border-radius: 5px 5px 0px 0px;">
-                    <p style="font: normal normal bold 12px/14px Poppins;color: #FFFFFF;text-align: center;">USO
-                        COMO
-                        PRIMEIRA OPÇÃO</p>
-                </div>
-                <div id="botao_2"
-                    style="width: 258px; height: 30px; background: 0% 0% no-repeat padding-box padding-box rgb(126, 101, 145); border-radius: 5px 5px 0px 0px;">
-                    <p style="font: normal normal bold 12px/14px Poppins;color: #FFFFFF; text-align: center;">USO
-                        COMPLEMENTAR</p>
-                </div>
-            </div>
-            <div id="janela_1"
-                style="margin-top: -9px; width: 743px; height: 162px; background: 0% 0% no-repeat padding-box padding-box rgb(27, 137, 146); border-radius: 12px; justify-content: space-around; align-items: center; display: flex;">
-                <div style="color: #FFFFFF;width: 689px;">
-                    <div>
-                        <p style="font: normal normal normal 12px/15px Poppins;color: #FFFFFF;">Acupuntura em casos
-                            de
-                            dor
-                            lombar crônica (URITS <i>et al.</i>, 2021), melhorando a dor e a
-                            funcionalidade física imediatamente
-                            após a sessão, assim como a qualidade de vida física (MU <i>et al.</i>, 2020); prevenção de
-                            enxaqueca,
-                            sendo pouco mais eficaz
-                            que medicamentos e muito mais segura (GIOVANARDI <i>et al.</i>, 2020); redução de dor em
-                            pacientes
-                            com
-                            câncer em tratamento
-                            paliativo (YANG <i>et al.</i>, 2021). </p>
-                        <p style="font: normal normal normal 12px/15px Poppins;color: #FFFFFF;">Fitoterápicos podem
-                            substituir tratamentos convencionais, como em estados leves de
-                            ansiedade e depressão, dispepsia não ulcerosa neoplásica, infecções urinárias
-                            inespecíficas
-                            (BRASIL, 2012).</p>
-                    </div>
-                </div>
-            </div>
-            <div id="janela_2"
-                style="margin-top: -9px; width: 743px; height: 202px; background: 0% 0% no-repeat padding-box padding-box rgb(126, 101, 145); border-radius: 12px; display: flex; justify-content: space-around; align-items: center;">
-                <div style="color: #FFFFFF;width: 689px;">
-                    <div>
-                        <p style="font: normal normal normal 12px/15px Poppins;color: #FFFFFF;">Meditação e <i>yoga</i>
-                            em
-                            casos de transtornos mentais, em associação com medicamentos e
-                            psicoterapia
-                            (VANCAMPFORT <i>et al.</i>,
-                            2021). </p>
-                        <p style="font: normal normal normal 12px/15px Poppins;color: #FFFFFF;">Meditação como modo
-                            de
-                            se atingir bem-estar psicológico, assim como melhorar a imunidade e
-                            saúde
-                            cardiovascular
-                            em adultos e diminuir abstenção escolar e infrações, ideação suicida e melhorar
-                            bem-estar e
-                            saúde cardiovascular em
-                            crianças e adolescentes (WILSON; KENNY; PEÑA, 2021).</p>
-                        <p style="font: normal normal normal 12px/15px Poppins;color: #FFFFFF;">Meditação durante a
-                            gravidez para reduzir ansiedade, depressão e
-                            estresse (BABBAR; OYARZABAL; OYARZABAL, 2021).</p>
-                        <p style="font: normal normal normal 12px/15px Poppins;color: #FFFFFF;">Plantas medicinais como
-                            primeira escolha, por exemplo hepatites tóxicas e
-                            hiperplasia prostática benigna (BRASIL, 2012).</p>
-                    </div>
+    <div style="display: flex;">
+        <div class="animate__animated animate__backInLeft">
+            <img src="recursos/imgs/img-slide-15.svg" style="width: 417px;margin-left: -37px;margin-top: -6px;">
+        </div>
+        <div style="width: 389px;margin-left: 64px;margin-top: 51px;">
+            <p>A implantação das PIS também contempla a universalidade, uma vez que provê acesso a serviços
+                geralmente restritos ao
+                setor privado. </p>
+            <p>Além de ampliar direitos, aumenta-se a possibilidade de atendimento das diferentes necessidades dos
+                usuários, o que está previsto no princípio da equidade.</p>
+            <div class="animate__animated animate__backInRight"
+                style="margin-top: 30px;display: flex;flex-direction: row;width: 386px;height: 105px;top: 139px;right: 148px;background-color: #FFF2D9;border-radius: 10px;">
+                <img src="recursos/imgs/lampada.svg"
+                    style="width: 60px;height: 60px;margin-top: 17px;margin-left: 20px;">
+                <div style="display: initial;margin-left: 21px;width: 275px;">
+                    <p style="font-weight: bold;color: #294666;font-size: 15px;">PARA REFLETIR</p>
+                    <p style="font-size: 12px;">No seu setor, há carências no cumprimento dos princípios do SUS?</p>
                 </div>
             </div>
         </div>
@@ -91,29 +34,3 @@
         <p style="color: #294666;font-size: 11px;">GESTÃO DA APS E PRÁTICAS INTEGRATIVAS EM SAÚDE</p>
     </div>
 </footer>
-<script>
-    $(() => {
-        let janelas = $(document).find('[id^=janela]').css('cursor', 'pointer').on("click", apagarJanelas);
-        apagarJanelas();
-        $(document).find('[id=janela_1]').show();
-        $(document).find('[id^=btn]').hide();
-        let botoes = $(document).find('[id^=botao]').map((index, botao) => {
-            $(botao).css('cursor', 'pointer');
-            $(botao).hover(() => {
-                $(document).find(`[id=btn_${index + 1}_2]`).show();
-            });
-            $(botao).mouseleave(() => {
-                $(document).find('[id^=btn]').hide();
-            });
-            $(botao).click(() => {
-                apagarJanelas();
-                $(janelas[index]).fadeIn();
-            })
-        })
-        function apagarJanelas() {
-            janelas.map((index, janela) => {
-                $(janela).hide();
-            })
-        }
-    })
-</script>
