--- a/tela-21.html
+++ b/tela-21.html
@@ -6,25 +6,18 @@
         style="position: absolute;font: normal normal normal 11px/15px Poppins;letter-spacing: 0px;color: #294666;margin-left: 112px;margin-top: 25px;width: 400px;">
         PRÁTICAS INTEGRATIVAS EM SAÚDE: CONCEITOS, CUIDADO E RESULTADOS</p>
 </div>
-<div style="margin-top: 81px;margin-left: 40px;width: 808px;">
-    <p>De 2017 a 2019, mesmo com dados parciais neste último ano, a oferta de procedimentos na APS cresceu de
-        148.152 registros
-        para 628.239, um aumento de 324%. Quanto às redes de atendimentos de média e alta complexidades, tivemos um
-        aumento no
-        registro de atendimento no período descrito, havendo um salto de 1.382 atendimentos em 2017 para 1.734 em
-        2019. </p>
-    <p>Quanto
-        às práticas mais ofertadas de modo coletivo, conforme o número de participantes, o relatório apontou, com
-        base em dados
-        do DataSUS, grande destaque para as plantas medicinais e fitoterapia e as práticas corporais da medicina
-        tradicional
-        chinesa (MTC). Outras práticas ofertadas incluíram: terapia comunitária, <i>yoga</i>, massagem, arteterapia,
-        meditação e
-        musicoterapia.</p>
-    <p>Já em relação aos atendimentos individuais, mais se destaca a MTC (208.739). Plantas
-        medicinais/fitoterapia (45.024) e homeopatia (22.091) aparecem em segundo e terceiro lugares,
-        respectivamente (BRASIL,
-        2020b).</p>
+<div style="margin-top: 88px;margin-left: 40px;width: 808px;">
+    <p style="font: normal normal bold 20px/30px Poppins;color: #FFA800;font-size: 20px;">Monitoramento da inserção
+        das PIS no SUS no Brasil e no Distrito Federal</p>
+    <p>Em 2019, foi realizado um monitoramento nacional da inserção das práticas integrativas em saúde no SUS. De
+        acordo com os
+        dados parciais para esse ano, as PIS foram ofertadas em 17.335 serviços da rede de atenção à saúde presentes
+        em 4.297
+        municípios, incluindo todas as capitais, contra 3.994 municípios, em 2017, e 4.159, em 2018. </p>
+    <p>Nesse levantamento, ainda
+        foi possível perceber que 90% dos serviços são prestados na Atenção Primária, num total de 13.123
+        estabelecimentos de
+        APS em 2017, 14.508 em 2018 e 15.603 em parte de 2019.</p>
 </div>
 <footer style="width: 1008px;height: 19px;display: flex;background-color: #CEE4F1;">
     <div style="margin-top: -8px;display: flex;margin-left: 42px;">
