--- a/tela-25.html
+++ b/tela-25.html
@@ -1,20 +1,30 @@
-<div style="margin-left: 40px;margin-top: 40px;width: 808px;">
-    <p style="color: #ffa800;font-size: 20px;font-weight: bolder;">Encerramento
-    </p>
-    <p style="font-size: 14px;">As PIS incluem práticas ancestrais, ou desenvolvidas mais recentemente, presentes em
-        vários sistemas de medicina
-        tradicionais, ou aplicadas de forma isolada.
-    </p>
-    <p style="font-size: 14px;margin-top: 30px;">Conseguimos perceber que estamos diante de ferramentas muito
-        valiosas, que
-        nos levam a uma postura mais abrangente nos cuidados com a saúde. Passamos a considerar fazeres que vão além
-        dos
-        procedimentos médicos convencionais, que ultrapassam os aspectos físicos e incluem questões sociais,
-        culturais e
-        emocionais, levando-nos a uma perspectiva integrativa. </p>
-    <p style="font-size: 14px;margin-top: 30px;">Nos próximos tópicos, serão especificados os recursos humanos, os
-        insumos e a estrutura necessários para o oferecimento de algumas das práticas integrativas e complementares
-        regulamentadas.</p>
+<div style="height: 60px; width: 100%; background-color: #a9e5ea;">
+    <img style="height: 60px; width: 460px; position: absolute; right: 0px;" src="recursos/imgs/H1.png">
+    <p style="position: absolute;color: #294666;margin-left: 43px;margin-top: 26px;font-size: 12px;">TÓPICO<strong>
+            1</strong></p>
+    <p
+        style="position: absolute;font: normal normal normal 11px/15px Poppins;letter-spacing: 0px;color: #294666;margin-left: 112px;margin-top: 25px;width: 400px;">
+        PRÁTICAS INTEGRATIVAS EM SAÚDE: CONCEITOS, CUIDADO E RESULTADOS</p>
 </div>
-<img class="animate__animated animate__backInUp" src="recursos/imgs/T38.png"
-    style="width: 888px;height: 166px;margin-top: 42px;">
+<div style="margin-top: 81px;margin-left: 40px;width: 808px;">
+    <p>Nesse processo, aspectos profundamente ligados à gestão são fundamentais para a resolução dos problemas
+        apresentados,
+        como a sensibilização e a capacitação dos profissionais e o provimento de espaços físicos e recursos
+        materiais, que são
+        os principais pontos de resolução dos problemas apresentados. </p>
+    <p>Pesquisa realizada com usuários, profissionais e gestores
+        da Atenção Primária no SUS do DF apontou, como fatores dificultadores para a ampliação da oferta de práticas
+        integrativas, a falta de apoio por parte de alguns profissionais, assim como a necessidade de focar nas
+        responsabilidades intersetoriais para garantir recursos necessários para a oferta dessas práticas. Foi
+        sugerida também
+        padronização dos processos formativos em PIS (LEMOS, 2021). </p>
+    <p>Portanto, você, na função de gestor, tem um papel
+        fundamental nesse processo, uma vez que o resultado da ampliação dessas práticas na APS é fruto do grande
+        esforço dos
+        profissionais da rede saúde, juntamente à gestão, para a estruturação da oferta.</p>
+</div>
+<footer style="width: 1008px;height: 19px;display: flex;background-color: #CEE4F1;">
+    <div style="margin-top: -8px;display: flex;margin-left: 42px;">
+        <p style="color: #294666;font-size: 11px;">GESTÃO DA APS E PRÁTICAS INTEGRATIVAS EM SAÚDE</p>
+    </div>
+</footer>
