--- a/tela-22.html
+++ b/tela-22.html
@@ -6,25 +6,25 @@
         style="position: absolute;font: normal normal normal 11px/15px Poppins;letter-spacing: 0px;color: #294666;margin-left: 112px;margin-top: 25px;width: 400px;">
         PRÁTICAS INTEGRATIVAS EM SAÚDE: CONCEITOS, CUIDADO E RESULTADOS</p>
 </div>
-<div>
-    <div style="display: flex;">
-        <div style="width: 386px;margin-left: 40px;margin-top: 122px;">
-            <p>Ouça o podcast para entender como se dá a implementação dessas práticas no Distrito Federal.</p>
-            <div style="position: absolute;top: 270px;left: 91px;width: 269px;">
-                <audio controls="">
-                    <source src="recursos/audio/GestaoInfoEvi_Audio6_T3_Tela2.mp3" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-                <div style="margin-top: 3px;margin-left: 13px;">
-                    <a href="recursos/pdf/GestaoInformadaEvidencias_podcast6_T3_Tela2.pdf" target="_blank">Texto do
-                        áudio</a>
-                </div>
-            </div>
-        </div>
-        <div class="animate__animated animate__backInRight">
-            <img src="recursos/imgs/img-slide-22.jpeg" style="width: 379px;margin-left: 19px;margin-top: 11px;">
-        </div>
-    </div>
+<div style="margin-top: 81px;margin-left: 40px;width: 808px;">
+    <p>De 2017 a 2019, mesmo com dados parciais neste último ano, a oferta de procedimentos na APS cresceu de
+        148.152 registros
+        para 628.239, um aumento de 324%. Quanto às redes de atendimentos de média e alta complexidades, tivemos um
+        aumento no
+        registro de atendimento no período descrito, havendo um salto de 1.382 atendimentos em 2017 para 1.734 em
+        2019. </p>
+    <p>Quanto
+        às práticas mais ofertadas de modo coletivo, conforme o número de participantes, o relatório apontou, com
+        base em dados
+        do DataSUS, grande destaque para as plantas medicinais e fitoterapia e as práticas corporais da medicina
+        tradicional
+        chinesa (MTC). Outras práticas ofertadas incluíram: terapia comunitária, <i>yoga</i>, massagem, arteterapia,
+        meditação e
+        musicoterapia.</p>
+    <p>Já em relação aos atendimentos individuais, mais se destaca a MTC (208.739). Plantas
+        medicinais/fitoterapia (45.024) e homeopatia (22.091) aparecem em segundo e terceiro lugares,
+        respectivamente (BRASIL,
+        2020b).</p>
 </div>
 <footer style="width: 1008px;height: 19px;display: flex;background-color: #CEE4F1;">
     <div style="margin-top: -8px;display: flex;margin-left: 42px;">
