--- a/tela-23.html
+++ b/tela-23.html
@@ -1,8 +1,33 @@
-<div class="coluna-esquerda altura-1_1 largura-1_3 centro">
-    <img src="recursos/imgs/T5.png" style="top: 0px;left: 0px;width: 138px;">
+<div style="height: 60px; width: 100%; background-color: #a9e5ea;">
+    <img style="height: 60px; width: 460px; position: absolute; right: 0px;" src="recursos/imgs/H1.png">
+    <p style="position: absolute;color: #294666;margin-left: 43px;margin-top: 26px;font-size: 12px;">TÓPICO<strong>
+            1</strong></p>
+    <p
+        style="position: absolute;font: normal normal normal 11px/15px Poppins;letter-spacing: 0px;color: #294666;margin-left: 112px;margin-top: 25px;width: 400px;">
+        PRÁTICAS INTEGRATIVAS EM SAÚDE: CONCEITOS, CUIDADO E RESULTADOS</p>
 </div>
-<div class="coluna-direita" style="margin-right: 35px;margin-top: 40px;">
-    <p>A figura a seguir destaca as principais consequências da inclusão das PICs nos sistemas de saúde.</p>
-    <img class="animate__animated animate__backInRight" src="recursos/imgs/img-slide-19.svg"
-        style="width: 426px;margin-top: -10px;margin-left: 120px;">
+<div>
+    <div style="display: flex;">
+        <div style="width: 386px;margin-left: 40px;margin-top: 122px;">
+            <p>Ouça o podcast para entender como se dá a implementação dessas práticas no Distrito Federal.</p>
+            <div style="position: absolute;top: 270px;left: 91px;width: 269px;">
+                <audio controls="">
+                    <source src="recursos/audio/GestaoInfoEvi_Audio6_T3_Tela2.mp3" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+                <div style="margin-top: 3px;margin-left: 13px;">
+                    <a href="recursos/pdf/GestaoInformadaEvidencias_podcast6_T3_Tela2.pdf" target="_blank">Texto do
+                        áudio</a>
+                </div>
+            </div>
+        </div>
+        <div class="animate__animated animate__backInRight">
+            <img src="recursos/imgs/img-slide-22.jpeg" style="width: 379px;margin-left: 19px;margin-top: 11px;">
+        </div>
+    </div>
 </div>
+<footer style="width: 1008px;height: 19px;display: flex;background-color: #CEE4F1;">
+    <div style="margin-top: -8px;display: flex;margin-left: 42px;">
+        <p style="color: #294666;font-size: 11px;">GESTÃO DA APS E PRÁTICAS INTEGRATIVAS EM SAÚDE</p>
+    </div>
+</footer>
