--- a/tela-29.html
+++ b/tela-29.html
@@ -38,7 +38,7 @@
     </p>
     <p>
         WILSON, N. A.; KENNY, M.; PEÑA, A. S. Role of meditation to improve children’s health: time to look at other
-        strategies. J <b>Paediatr Child Health</b>, [<i>s. l.</i>], v. 57, n. 2, p. 178-181, Feb. 2021.
+        strategies. <b>J Paediatr Child Health</b>, [<i>s. l.</i>], v. 57, n. 2, p. 178-181, Feb. 2021.
     </p>
     <p>
         WORLD HEALTH ORGANIZATION. <b>
