--- a/tela-13.html
+++ b/tela-13.html
@@ -26,9 +26,11 @@
     <p style="margin-top: 17px;">Considerando as 17 práticas já implantadas no DF, neste curso focaremos em:</p>
     <div style="margin-left: 67px;width: 699px;">
         <p>acupuntura, arteterapia, automassagem, fitoterapia e plantas medicinais, <i>
-            hatha yoga, homeopatia, lian
-                gong
-        </i> em 18
+            hatha yoga</i>, homeopatia, <i>
+                lian
+                    gong
+            </i>
+         em 18
             terapias, medicina e terapias antroposóficas, meditação, musicoterapia, reiki, <i>shantala, tai chi chuan</i> e
             terapia
             comunitária integrativa, as quais constam na política distrital; </p>
