--- a/tela-26.html
+++ b/tela-26.html
@@ -13,7 +13,7 @@
         culturais e
         emocionais, levando-nos a uma perspectiva integrativa. </p>
     <p style="font-size: 14px;margin-top: 30px;">Nos próximos tópicos, serão especificados os recursos humanos, os
-        insumos e a estrutura necessários para o oferecimento de algumas das práticas integrativas e complementares
+        insumos e a estrutura necessários para o oferecimento de algumas das práticas integrativas em saúde
         regulamentadas.</p>
 </div>
 <img class="animate__animated animate__backInUp" src="recursos/imgs/T38.png"
