--- a/tela-3.html
+++ b/tela-3.html
@@ -8,19 +8,23 @@
 </div>
 <div style="margin-top: 62px;margin-left: 40px;width: 808px;">
     <p style="color: #FFA800;font-size: 20px;font-weight: bolder;">Alguns conceitos</p>
-    <p>O termo práticas integrativas e complementares, empregado na Política Nacional de Práticas Integrativas e
-        Complementares
-        no SUS (PNPIC), refere-se a um conjunto heterogêneo de sistemas médicos complexos e recursos terapêuticos,
-        os quais não
-        fazem parte da medicina convencional, ainda hegemônica no SUS. </p>
-    <p>No mundo, existem diferentes terminologias para se
-        referir a esse conjunto de práticas em saúde. A Organização Mundial da Saúde atualmente as denomina como
-        medicinas
-        tradicionais, complementares e integrativas (MTCI) (SOUSA; GUIMARÃES; GALLEGO-PERREZ, 2021); e a Política
-        Distrital para
-        essas práticas as denomina de práticas integrativas em saúde (PIS) (DISTRITO FEDERAL, 2014), terminologia
-        que será
-        empregada neste minicurso.</p>
+    <p>No mundo, existem diferentes terminologias para se referir às práticas integrativas e complementares. A
+        Organização
+        Mundial da Saúde atualmente as denomina como medicinas tradicionais, complementares e integrativas (MTCI)
+        (SOUSA;
+        GUIMARÃES; GALLEGO-PERREZ, 2021). O termo práticas integrativas e complementares, empregado na Política Nacional
+        de
+        Práticas Integrativas e Complementares no SUS (PNPIC), refere-se a um conjunto heterogêneo de sistemas médicos
+        complexos
+        e recursos terapêuticos, os quais não fazem parte da medicina convencional, ainda hegemônica no SUS.</p>
+    <p>No Distrito Federal, a política para essas práticas as denomina de práticas integrativas em saúde (PIS) (DISTRITO
+        FEDERAL, 2014), terminologia que será empregada neste minicurso. Destaca-se que as PIS são promotoras de cuidado
+        e,
+        principalmente, de autocuidado, ampliando e estimulando a autonomia do usuário enquanto agente ativo e não
+        somente
+        passivo desse processo. Isso pode repercutir a curto, médio e longo prazo nas demandas dos usuários e na
+        sobrecarga do
+        SUS.</p>
 </div>
 <footer style="width: 1008px;height: 19px;display: flex;background-color: #CEE4F1;">
     <div style="margin-top: -8px;display: flex;margin-left: 42px;">
