--- a/tela-6.html
+++ b/tela-6.html
@@ -26,7 +26,7 @@
         style="width: 96px; margin-top: 58px; margin-left: 190px; cursor: pointer;">
     <img id="botao_2" src="recursos/imgs/img.2-slide-5.svg"
         style="width: 96px; margin-top: 58px; margin-left: 166px; cursor: pointer;">
-    <div style="display: flex;margin-top: 30px;margin-left: 150px;width: 445px;justify-content: space-between;">
+    <div style="display: flex;margin-top: 30px;margin-left: 150px;width: 525px;justify-content: space-between;">
         <div
             style="width: 174px;height: 24px;background: #455A64 0% 0% no-repeat padding-box;border-radius: 12px; display: flex; align-items: center; justify-content: center;">
             <p style="font: normal normal normal 12px/16px Poppins;color: #FFFFFF; text-align: center;">Recursos
@@ -39,7 +39,7 @@
                 Complexos</p>
         </div>
         <div>
-            <div class="jan" id="janela_1">
+            <div class="jan" id="janela_1" style="cursor: pointer; display: none;">
                 <div
                     style="width: 743px;height: 173px;background: #1B8992 0% 0% no-repeat padding-box;display: flex;position: absolute;top: 190px;left: 80px;align-items: center;border-radius: 12px;justify-content: space-evenly;">
                     <div
@@ -47,30 +47,31 @@
                         <p style="font: normal normal bold 14px/14px Poppins;color: #FFFFFF;">RECURSOS TERAPÊUTICOS
                         </p>
                         <p style="width: 689px;font: normal normal normal 14px/18px Poppins;color: #FFFFFF;">A
-                            medicina
-                            convencional conta com os medicamentos (quimicamente definidos) e as intervenções
-                            cirúrgicas
-                            como seus
-                            principais recursos terapêuticos. A caracterização “quimicamente definidos” para os
-                            medicamentos convencionais tem como
-                            objetivo distingui-los de outros medicamentos, especialmente os fitoterápicos,
-                            homeopáticos
-                            e antroposóficos, os quais
-                            são recursos terapêuticos no contexto das PIS.</p>
+                            medicina convencional conta com os medicamentos (quimicamente definidos) e as
+                            intervenções cirúrgicas como seus
+                            principais recursos terapêuticos. Já no contexto das PIS, além dos medicamentos
+                            (ayurvédicos, fitoterápicos,
+                            homeopáticos e antroposóficos), também são usadas práticas de cuidado, a exemplo de
+                            reiki, acupuntura, terapia
+                            comunitária integrativa, automassagem meditação e hatha yoga, os quais podem ser
+                            aplicados isoladamente ou no contexto
+                            de um sistema médico complexo.</p>
                     </div>
                     <p
                         style="font: normal normal normal 14px/18px Poppins;letter-spacing: 0px;color: white;position: absolute;top: -9px;left: 730px;">
                         x</p>
                 </div>
             </div>
-            <div class="jan" id="janela_2">
+            <div class="jan" id="janela_2" style="cursor: pointer; display: none;">
                 <div
                     style="width: 743px;height: 173px;background: #1B8992 0% 0% no-repeat padding-box;display: flex;position: absolute;top: 190px;left: 80px;align-items: center;border-radius: 12px;justify-content: space-evenly;">
                     <div
                         style="width: 689px;display: flex;flex-direction: column;justify-content: space-between;align-items: center;">
-                        <p style="font: normal normal bold 14px/14px Poppins;color: #FFFFFF;">SISTEMAS MÉDICOS COMPLEXOS
+                        <p style="font: normal normal bold 14px/14px Poppins;color: #FFFFFF;">SISTEMAS MÉDICOS
+                            COMPLEXOS
                         </p>
-                        <p style="width: 689px;font: normal normal normal 14px/18px Poppins;color: #FFFFFF;">Homeopatia,
+                        <p style="width: 689px;font: normal normal normal 14px/18px Poppins;color: #FFFFFF;">
+                            Homeopatia,
                             medicina antroposófica, medicina tradicional chinesa (MTC) e medicina ayurvédica são
                             exemplos de sistemas
                             médicos complexos, ou seja, abrangem não apenas recursos terapêuticos, mas também formas
