--- a/tela-8.html
+++ b/tela-8.html
@@ -7,19 +7,11 @@
         PRÁTICAS INTEGRATIVAS EM SAÚDE: CONCEITOS, CUIDADO E RESULTADOS</p>
 </div>
 <div style="margin-top: 56px;margin-left: 63px;width: 785px;">
-    <p style="margin-top: 50px;">Além dos medicamentos, exemplos de recursos terapêuticos são a meditação e o <i>hatha
-        yoga</i>, os quais podem ser aplicados
-        isoladamente ou no contexto da medicina ayurvédica, sistema médico complexo que inclui inúmeros recursos
-        terapêuticos.
-        Terapia comunitária integrativa, automassagem e reiki são exemplos de outros recursos terapêuticos que podem
-        ser
-        inseridos no SUS. </p>
-    <p>Por sua vez, a acupuntura faz parte da MTC, porém, no Brasil, tem sido empregada como um recurso
-        terapêutico único, ao contrário do que acontece tradicionalmente na China, onde diversos recursos
-        terapêuticos estão
-        disponíveis no contexto da MTC.</p>
+    <p style="margin-top: 100px;">A acupuntura é um exemplo de prática de cuidado que faz parte da MTC e que pode
+        ser integrada com outros recursos
+        terapêuticos, tais como automassagem, <i>lian gong, tai chi chuan</i> e auriculoterapia.</p>
     <div class="animate__animated animate__backInRight"
-        style="margin-top: 4px;margin-left: 85px;display: flex;flex-direction: row;width: 616px;height: 109px;top: 139px;right: 148px;background-color: #FFF2D9;border-radius: 10px;">
+        style="margin-top: 70px;margin-left: 85px;display: flex;flex-direction: row;width: 616px;height: 109px;top: 139px;right: 148px;background-color: #FFF2D9;border-radius: 10px;">
         <img src="recursos/imgs/saibaMais.svg" style="width: 63px;height: 46px;margin-top: 37px;margin-left: 20px;">
         <div style="display: initial;margin-left: 11px;width: 506px;">
             <p style="font-weight: bold;color: #294666;font-size: 15px;">SAIBA MAIS</p>
