--- a/tela-6.html
+++ b/tela-6.html
@@ -53,7 +53,7 @@
                             (ayurvédicos, fitoterápicos,
                             homeopáticos e antroposóficos), também são usadas práticas de cuidado, a exemplo de
                             reiki, acupuntura, terapia
-                            comunitária integrativa, automassagem meditação e hatha yoga, os quais podem ser
+                            comunitária integrativa, automassagem meditação e <i>hatha yoga</i>, os quais podem ser
                             aplicados isoladamente ou no contexto
                             de um sistema médico complexo.</p>
                     </div>
