--- a/tela-20.html
+++ b/tela-20.html
@@ -2,7 +2,7 @@
     <img src="recursos/imgs/T5.png" style="top: 0px;left: 0px;width: 138px;">
 </div>
 <div class="coluna-direita" style="margin-right: 35px;margin-top: 40px;">
-    <p>A figura a seguir destaca as principais consequências da inclusão das PICs nos sistemas de saúde.</p>
+    <p>A figura a seguir destaca as principais consequências da inclusão das PIS nos sistemas de saúde.</p>
     <img class="animate__animated animate__backInRight" src="recursos/imgs/img-slide-19.svg"
         style="width: 426px;margin-top: -10px;margin-left: 120px;">
 </div>
