--- a/tela-8.html
+++ b/tela-8.html
@@ -7,9 +7,9 @@
         PRÁTICAS INTEGRATIVAS EM SAÚDE: CONCEITOS, CUIDADO E RESULTADOS</p>
 </div>
 <div style="margin-top: 56px;margin-left: 63px;width: 785px;">
-    <p style="margin-top: 100px;">A acupuntura é um exemplo de prática de cuidado que faz parte da MTC e que pode
-        ser integrada com outros recursos
-        terapêuticos, tais como automassagem, <i>lian gong, tai chi chuan</i> e auriculoterapia.</p>
+    <p style="margin-top: 100px;">A acupuntura é um exemplo de prática de cuidado que faz parte da Medicina Tradicional
+        Chinesa (MTC) e que pode ser integrada com outros recursos terapêuticos, tais como automassagem, <i>lian gong,
+            tai chi chuan</i> e auriculoterapia.</p>
     <div class="animate__animated animate__backInRight"
         style="margin-top: 70px;margin-left: 85px;display: flex;flex-direction: row;width: 616px;height: 109px;top: 139px;right: 148px;background-color: #FFF2D9;border-radius: 10px;">
         <img src="recursos/imgs/saibaMais.svg" style="width: 63px;height: 46px;margin-top: 37px;margin-left: 20px;">
