--- a/tela-6.html
+++ b/tela-6.html
@@ -46,16 +46,13 @@
                         style="width: 689px;display: flex;flex-direction: column;justify-content: space-between;align-items: center;">
                         <p style="font: normal normal bold 14px/14px Poppins;color: #FFFFFF;">RECURSOS TERAPÊUTICOS
                         </p>
-                        <p style="width: 689px;font: normal normal normal 14px/18px Poppins;color: #FFFFFF;">A
-                            medicina convencional conta com os medicamentos (quimicamente definidos) e as
-                            intervenções cirúrgicas como seus
-                            principais recursos terapêuticos. Já no contexto das PIS, além dos medicamentos
-                            (ayurvédicos, fitoterápicos,
-                            homeopáticos e antroposóficos), também são usadas práticas de cuidado, a exemplo de
-                            reiki, acupuntura, terapia
-                            comunitária integrativa, automassagem meditação e <i>hatha yoga</i>, os quais podem ser
-                            aplicados isoladamente ou no contexto
-                            de um sistema médico complexo.</p>
+                        <p style="width: 689px;font: normal normal normal 14px/18px Poppins;color: #FFFFFF;">A medicina
+                            convencional conta com os medicamentos (quimicamente definidos) e as intervenções cirúrgicas
+                            como seus principais recursos terapêuticos. Já no contexto das PIS, além dos medicamentos
+                            (ayurvédicos, fitoterápicos, homeopáticos e antroposóficos), também são usadas diversas
+                            outras práticas de cuidado, a exemplo de reiki, acupuntura, terapia comunitária integrativa,
+                            automassagem meditação e <i>hatha yoga</i>, os quais podem ser aplicados isoladamente ou no
+                            contexto de um sistema médico complexo.</p>
                     </div>
                     <p
                         style="font: normal normal normal 14px/18px Poppins;letter-spacing: 0px;color: white;position: absolute;top: -9px;left: 730px;">
